fix text-align select

--- a/src/styles/mainStyles.css
+++ b/src/styles/mainStyles.css
@@ -219,6 +219,12 @@ a {
   color: #2d3142;
 }
 
+/* text */
+
 .nowrap {
   white-space: nowrap;
+}
+
+.text-align {
+  text-align: center;
 }
